# SVG-CLI-Creator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  vectorize_image.py
